--- a/src/main/resources/templates/infrastructure/security/authResponseDto.mustache
+++ b/src/main/resources/templates/infrastructure/security/authResponseDto.mustache
@@ -22,6 +22,7 @@ public class AuthResponseDto implements Serializable {
 	private String username;
 	private String token;
 	private Instant expirationAt;
+	private String tenant;
 
 }
 
