--- a/src/main/resources/templates/infrastructure/security/jwtService.mustache
+++ b/src/main/resources/templates/infrastructure/security/jwtService.mustache
@@ -41,6 +41,11 @@ String userId = userPrincipal.getId();
 
 {{#isMultiTenant}}
 String tenantId = userPrincipal.getTenantId();
+
+if (tenantId == null) {
+	tenantId = "NA";
+}
+
 {{/isMultiTenant}}
 
 if(userId == null) {
