--- a/src/main/resources/templates/shared/audit/identifiableUser.mustache
+++ b/src/main/resources/templates/shared/audit/identifiableUser.mustache
@@ -4,8 +4,8 @@ public interface IdentifiableUser {
 
 	String getUsername();
 	public String getId() ;
-{{#isMultitenant}}
+{{#isMultiTenant}}
 	public String getTenantId() ;
-{{/isMultitenant}}
+{{/isMultiTenant}}
 
 }
