--- a/src/main/resources/templates/infrastructure/security/registerUser.mustache
+++ b/src/main/resources/templates/infrastructure/security/registerUser.mustache
@@ -1,4 +1,7 @@
 package {{package}};
+{{#header}}
+	{{{.}}}
+{{/header}}
 {{#imports}}
 	import {{.}};
 {{/imports}}
@@ -9,10 +12,11 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
+import lombok.extern.slf4j.Slf4j;
 import java.util.List;
 import java.util.UUID;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class RegisterUser {
@@ -21,16 +25,20 @@ private final UserRepository userRepository;
 private final PasswordEncoder passwordEncoder;
 private final JwtService jwtService;
 
-public AuthResponseDto handle(AuthRequestDto request) {
+public AuthResponseDto handle(AuthRequestDto request,String tenantId) {
 if (userRepository.findByUsername(request.getUsername()).isPresent()) {
-throw new IllegalArgumentException("Username already exists");
+	throw new IllegalArgumentException("Username already exists");
 }
 
 User user = User.builder()
 .id(UUID.randomUUID().toString())
 .username(request.getUsername())
 .password(passwordEncoder.encode(request.getPassword()))
+.tenant(new Tenant(tenantId))
 .build();
+
+log.info("Registering user: {}", user.getUsername());
+userRepository.save(user);
 
 UserPrincipal userPrincipal = new UserPrincipal(user);
 
@@ -42,12 +50,15 @@ Authentication authentication = new UsernamePasswordAuthenticationToken(
 
 String token = jwtService.generateToken(authentication);
 
+String tenant = user.getTenant() != null ? user.getTenant().getName() : null;
+
 return AuthResponseDto.builder()
 .token(token)
 .username(user.getUsername())
 .code(1)
 .expirationAt(jwtService.extractExpiration(token))
 .message("Login successful")
+.tenant(tenant)
 .build();
 }
 }
